# async_architecture_aTES

./: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
accounting/: manage.py
accounting/src/: main.py
accounting/src/alembic/: alembic.ini  env.py
accounting/src/api/: __init__.py  dependencies.py
accounting/src/conf/: settings.py
accounting/src/db/: base.py
accounting/src/events/: consumer.py
accounting/src/management/: __init__.py
accounting/src/models/: __init__.py  billing.py  task.py  user.py
accounting/src/repositories/: account.py  analytics.py  billing_cycle.py  task.py  transaction.py  user.py
accounting/src/services/: billing.py
accounting/src/templates/: base.html
auth/: manage.py
auth/src/: main.py
auth/src/alembic/: alembic.ini  env.py
auth/src/api/: __init__.py  dependencies.py
auth/src/api/v1/: auth.py  (+2 more)
auth/src/conf/: __init__.py  settings.py
auth/src/db/: __init__.py  base.py
auth/src/events/: producer.py  user_lifecycle.py
auth/src/management/: __init__.py
auth/src/models/: __init__.py  oauth.py  user.py
auth/src/repositories/: user.py
auth/src/schemas/: auth.py  oauth.py
auth/src/templates/: base.html  example.html
docs/weeks/: week_1.md
etc/postgresql/: init_db.sh
task_tracker/: manage.py
task_tracker/src/: main.py
task_tracker/src/alembic/: alembic.ini  env.py
task_tracker/src/api/: __init__.py  dependencies.py
task_tracker/src/conf/: settings.py
task_tracker/src/db/: base.py
task_tracker/src/events/: consumer.py  producer.py  task_lifecycle.py
task_tracker/src/management/: __init__.py
task_tracker/src/models/: __init__.py  task.py  user.py
task_tracker/src/repositories/: user.py
(+34 files in other folders)
